<resources>
    <string name="app_name">Keep in mind</string>
    <string name="email_address_string">Email address</string>
    <string name="password_string">Password</string>
    <string name="forgot_password_string">Forgot your password?</string>
    <string name="login_button_string">Log in</string>
    <string name="dont_have_acc_string">Don\'t have an account?</string>
    <string name="big_app_name">KEEP IN MIND</string>
    <string name="error_email_invalid">invalid email</string>
    <string name="error_password_invalid">invalid password</string>
    <string name="bnm_titleTests">Tests</string>
    <string name="bnm_titleThemes">Themes</string>
    <string name="bnm_titleSettings">Settings</string>
    <string name="choice_category_title">Choice category</string>
    <string name="empty_categories_list">The categories list is empty</string>
    <string name="enter_theme_name_text">Enter theme name</string>
    <string name="enter_category_name_text">Enter category name</string>
    <string name="theme_name_text">Theme name</string>
    <string name="category_name_text">Category name</string>
    <string name="save_text">Save</string>
    <string name="new_category_text">New category</string>
    <string name="cancel_text">Cancel</string>
    <string name="ok_text">Ok</string>
    <string name="empty_questions_list_text">You have not any question</string>
    <string name="enter_the_answer_text">Enter the answer</string>
    <string name="enter_your_question">Enter you question</string>
    <string name="question_text">Question text</string>
    <string name="answer_text">Answer text</string>
    <string name="pick_themes_text">Pick themes</string>
    <string name="enter_test_name_text">Enter test name</string>
    <string name="test_name_text">Test name</string>
    <string name="questions">questions:</string>
    <string name="delete_text">delete</string>
    <string name="show_answer_text">Show answer</string>
</resources>